--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -266,6 +266,10 @@ a {
     object-fit: cover;
 }
 
+.service__list {
+    margin-bottom: 55px;
+}
+
 /* service item */
 .service-item {
     display: flex;
@@ -273,6 +277,17 @@ a {
     padding: 22px;
     border-radius: 10px;
     background: #FFF;
+    transition: 0.25s;
+}
+
+.service-item:hover {
+    position: relative;
+    box-shadow: 0px 14px 28px 0px rgba(0, 0, 0, 0.05);
+}
+
+.service-item:hover .service-item__icon {
+    background: #2E80CE;
+    color: #FFF;
 }
 
 .service-item__icon {
@@ -286,4 +301,78 @@ a {
     color: #10375C;
     background: #eff6fd;
     box-shadow: 0px 8px 16px rgba(0,0,0,0.05);
+    transition: 0.25s;
 }
+
+.service-item__body {
+    margin-left: 20px;
+}
+
+.service-item__heading {
+    font-weight: 600;
+    font-size: 1.8rem;
+    line-height: 1.27;
+    color: #10375C;
+}
+
+.service-item__desc {
+    margin-top: 8px;
+    font-weight: 300;
+    font-size: 1.6rem;
+    line-height: 1.75;
+    color: #575F66;
+}
+
+/* work */
+.work {
+    padding: 100px 0;
+    background: #f7fbff;
+}
+
+.work__desc {
+    width: 468px;
+}
+
+.work__list {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    column-gap: 30px;
+    margin-top: 70px;
+}
+
+.work-item {
+    padding: 44px;
+    border: 16px solid #eaf6ff;
+    border-radius: 4px;
+    transition: 0.25s;
+}
+
+.work-item:hover {
+    transform: translateY(-16px);
+    border-color: #2E80CE;
+}
+
+.work-item__heding {
+    margin-top: 20px;
+    font-weight: 600;
+    font-style: 2.6rem;
+    line-height: 1.38;
+    color: #10375C;
+}
+
+.work-item__desc {
+    margin-top: 28px;
+    font-weight: 300;
+    font-style: 1.6rem;
+    line-height: 1.75;
+    color: #575f66;
+}
+
+.work-item__more {
+    display: inline-block;
+    margin-top: 18px;
+    font-style: 1.6rem;
+    line-height: 1.75;
+    color: #2E80CE;
+}
+
