--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -599,7 +599,10 @@ a {
 
 .news-item:hover {
     box-shadow: 0px 18px 50px 0px rgba(0, 0, 0, 0.05);
-    transform: translateY(-18px);
+}
+
+.news-item:hover .news-item__img {
+    transform: scale(1.1);
 }
 
 .news-item:hover .news-item__body {
@@ -607,10 +610,16 @@ a {
 }
 
 .news-item__thumb {
+    height: 172px;
+    overflow: hidden;
+}
+
+.news-item__img {
     display: block;
     width: 100%;
-    height: 172px;
+    height: 100%;
     object-fit: cover;
+    transition: 0.25s;
 }
 
 .news-item__body {
@@ -646,3 +655,42 @@ a {
     color: #10375C;
 }
 
+.news-item__more:hover {
+    color: #2E80CE;
+}
+
+/* Appointment */
+.appointment {
+    margin: 85px 0 170px;
+}
+
+.appointment__inner {
+    padding: 100px 70px;
+    background: #f7fbff;
+    border-radius: 4px;
+    text-align: center;
+}
+
+.appointment__heading {
+    position: relative;
+    padding-bottom: 20px;
+}
+
+.appointment__heading::after {
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    margin: 0 auto;
+    display: block;
+    content: "";
+    width: 136px;
+    height: 2px;
+    background: #2E80CE;
+}
+
+.appointment__desc {
+    max-width: 617px;
+    margin: 18px auto 38px;
+    font-style: 1.6rem;
+}
